# cleanmail

./: .gitignore  README.md  app.py  email_validator.py  mail_client.py  main.py  pyproject.toml  requirements.txt
Instructions/: SECURITY_AUDIT.md  readme.md
cleanmail/: __init__.py  mail_client.py  styling.py
tests/: test_delete_from_sender.py  test_delete_older_than.py  test_get_all_folders.py
